crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_function_uniontypes.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Test",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Property": {
                  "name": "prop",
                  "visibility": "Public",
                  "set_visibility": null,
                  "is_static": false,
                  "is_readonly": false,
                  "type_hint": {
                    "kind": {
                      "Union": [
                        {
                          "kind": {
                            "Named": {
                              "parts": [
                                "A"
                              ],
                              "kind": "Unqualified",
                              "span": {
                                "start": 31,
                                "end": 32
                              }
                            }
                          },
                          "span": {
                            "start": 31,
                            "end": 32
                          }
                        },
                        {
                          "kind": {
                            "Named": {
                              "parts": [
                                "iterable"
                              ],
                              "kind": "Unqualified",
                              "span": {
                                "start": 33,
                                "end": 41
                              }
                            }
                          },
                          "span": {
                            "start": 33,
                            "end": 41
                          }
                        },
                        {
                          "kind": {
                            "Named": {
                              "parts": [
                                "null"
                              ],
                              "kind": "Unqualified",
                              "span": {
                                "start": 42,
                                "end": 46
                              }
                            }
                          },
                          "span": {
                            "start": 42,
                            "end": 46
                          }
                        }
                      ]
                    },
                    "span": {
                      "start": 31,
                      "end": 46
                    }
                  },
                  "default": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 24,
                "end": 52
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 55
      }
    },
    {
      "kind": {
        "Function": {
          "name": "test",
          "params": [
            {
              "name": "a",
              "type_hint": {
                "kind": {
                  "Union": [
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "A"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 71,
                            "end": 72
                          }
                        }
                      },
                      "span": {
                        "start": 71,
                        "end": 72
                      }
                    },
                    {
                      "kind": {
                        "Named": {
                          "parts": [
                            "B"
                          ],
                          "kind": "Unqualified",
                          "span": {
                            "start": 73,
                            "end": 75
                          }
                        }
                      },
                      "span": {
                        "start": 73,
                        "end": 75
                      }
                    }
                  ]
                },
                "span": {
                  "start": 71,
                  "end": 75
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 71,
                "end": 77
              }
            }
          ],
          "body": [],
          "return_type": {
            "kind": {
              "Union": [
                {
                  "kind": {
                    "Named": {
                      "parts": [
                        "int"
                      ],
                      "kind": "Unqualified",
                      "span": {
                        "start": 80,
                        "end": 83
                      }
                    }
                  },
                  "span": {
                    "start": 80,
                    "end": 83
                  }
                },
                {
                  "kind": {
                    "Named": {
                      "parts": [
                        "false"
                      ],
                      "kind": "Unqualified",
                      "span": {
                        "start": 84,
                        "end": 89
                      }
                    }
                  },
                  "span": {
                    "start": 84,
                    "end": 89
                  }
                }
              ]
            },
            "span": {
              "start": 80,
              "end": 89
            }
          },
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 57,
        "end": 92
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 92
  }
}
