crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_haltcompiler_1.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Variable": "a"
          },
          "span": {
            "start": 7,
            "end": 9
          }
        }
      },
      "span": {
        "start": 7,
        "end": 11
      }
    },
    {
      "kind": {
        "HaltCompiler": "\nHallo World!"
      },
      "span": {
        "start": 11,
        "end": 44
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 44
  }
}
