crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_haltcompiler_3.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Namespace": {
          "name": {
            "parts": [
              "A"
            ],
            "kind": "Unqualified",
            "span": {
              "start": 17,
              "end": 18
            }
          },
          "body": "Simple"
        }
      },
      "span": {
        "start": 7,
        "end": 20
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Variable": "a"
          },
          "span": {
            "start": 20,
            "end": 22
          }
        }
      },
      "span": {
        "start": 20,
        "end": 24
      }
    },
    {
      "kind": {
        "HaltCompiler": ""
      },
      "span": {
        "start": 24,
        "end": 42
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 42
  }
}
