crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_haltcompilerinvalidsyntax.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "HaltCompiler": ""
      },
      "span": {
        "start": 6,
        "end": 23
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 23
  }
}
