crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_haltcompileroutermostscope.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Bool": true
            },
            "span": {
              "start": 10,
              "end": 14
            }
          },
          "then_branch": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "HaltCompiler": "}"
                  },
                  "span": {
                    "start": 22,
                    "end": 42
                  }
                }
              ]
            },
            "span": {
              "start": 16,
              "end": 42
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 6,
        "end": 42
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 42
  }
}
